refactor(cache): 重构缓存客户端实现以支持逻辑过期和穿透策略
- 将 queryWithLogicalExpire 方法替换为 queryWithLogicalExpireAndPassThrough
- 在 CacheClient 中使用 AtomicReference 替代普通变量确保线程安全
- 更新 RedisBatchCacheUtil 以支持新的缓存读取策略
- 实现 CacheReadResult 类来管理缓存状态和数据读取
- 添加对逻辑过期时间和数据结构的处理
- 修改 ShopServiceImpl 中的缓存查询调用方式
- 更新 UserServiceImpl 中的用户信息缓存查询逻辑